fixed small layout issue

--- a/style.css
+++ b/style.css
@@ -136,7 +136,7 @@ dialog > form {
 
     & label {
         display: grid;
-        grid-template-columns: 1fr 1.5fr;
+        grid-template-columns: 1fr 1fr;
     }
 
     & div {
